--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  border-left: none;
+  border-bottom:none;
+  border-radius: 10px;
+  width : 100px;
 }
 
 .past {
